fix(css): datings count span too much to the right

--- a/ajapaik/ajapaik/static/css/ajp-style.css
+++ b/ajapaik/ajapaik/static/css/ajp-style.css
@@ -1397,7 +1397,7 @@ a.fullscreen {
 
 #ajp-start-dating-button > span {
   position: relative;
-  left: 30px;
+  left: 20px;
   top: -23px;
   margin-bottom: -30px;
 }
